fix: identity tooltip showing on mobile

--- a/src/pages/proposals.css
+++ b/src/pages/proposals.css
@@ -8,6 +8,7 @@
 }
 
 .Animated {
+  width: 100%;
   transition: all 0.5s ease 0s;
 }
 
